{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 316,
  "lineage": "88907172-1484-11a9-cba1-b9c120dbfa24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "helloSpotHero",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c3f7881756c592f6",
            "domain": "vpc",
            "id": "eipalloc-0908e0d830f0ada08",
            "instance": "i-0657555527d25170b",
            "network_interface": "eni-092a5e34ed830e63f",
            "private_dns": "ip-10-0-1-41.us-west-2.compute.internal",
            "private_ip": "10.0.1.41",
            "public_dns": "ec2-44-233-69-81.us-west-2.compute.amazonaws.com",
            "public_ip": "44.233.69.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.helloSpotHero",
            "aws_security_group.web",
            "aws_subnet.public-subnet-in-us-west-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-016e23c58e56ac42d",
            "domain": "vpc",
            "id": "eipalloc-0c49266ac89bf7f5e",
            "instance": "i-0d8f4790223c2e38c",
            "network_interface": "eni-0bac7b901d83f050b",
            "private_dns": "ip-10-0-1-155.us-west-2.compute.internal",
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-44-233-83-247.us-west-2.compute.amazonaws.com",
            "public_ip": "44.233.83.247",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_security_group.nat",
            "aws_subnet.public-subnet-in-us-west-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:104673660634:loadbalancer/helloSpotHero-elb",
            "availability_zones": [
              "us-west-2a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "helloSpotHero-elb-1103492818.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 300,
                "target": "HTTP:32769/",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "helloSpotHero-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0657555527d25170b",
              "i-08c9ec7c2fd4714b1",
              "i-09f4cd57d7fe161d7"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 32769,
                "instance_protocol": "http",
                "lb_port": 32769,
                "lb_protocol": "http"
              }
            ],
            "name": "helloSpotHero-elb",
            "security_groups": [
              "sg-0dbe24061ad9988d2"
            ],
            "source_security_group": "104673660634/default",
            "source_security_group_id": "sg-0dbe24061ad9988d2",
            "subnets": [
              "subnet-033e451ebf103152a"
            ],
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_instance.helloSpotHero",
            "aws_security_group.web",
            "aws_subnet.public-subnet-in-us-west-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "helloSpotHero",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04590e7389a6e577c",
            "arn": "arn:aws:ec2:us-west-2:104673660634:instance/i-0657555527d25170b",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0657555527d25170b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aescoto",
            "monitoring": false,
            "primary_network_interface_id": "eni-092a5e34ed830e63f",
            "private_dns": "ip-10-0-1-41.us-west-2.compute.internal",
            "private_ip": "10.0.1.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a742df7565405384",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-033e451ebf103152a",
            "tags": {
              "Name": "helloSpotHero-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04ef819c6738e0941"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public-subnet-in-us-west-2",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04590e7389a6e577c",
            "arn": "arn:aws:ec2:us-west-2:104673660634:instance/i-09f4cd57d7fe161d7",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09f4cd57d7fe161d7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aescoto",
            "monitoring": false,
            "primary_network_interface_id": "eni-0089e0d2a51457384",
            "private_dns": "ip-10-0-1-251.us-west-2.compute.internal",
            "private_ip": "10.0.1.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06b139c4dd07b80a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-033e451ebf103152a",
            "tags": {
              "Name": "helloSpotHero-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04ef819c6738e0941"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public-subnet-in-us-west-2",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04590e7389a6e577c",
            "arn": "arn:aws:ec2:us-west-2:104673660634:instance/i-08c9ec7c2fd4714b1",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-08c9ec7c2fd4714b1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aescoto",
            "monitoring": false,
            "primary_network_interface_id": "eni-0400bdfb2e6d1482c",
            "private_dns": "ip-10-0-1-54.us-west-2.compute.internal",
            "private_ip": "10.0.1.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0061ff712c293e410",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-033e451ebf103152a",
            "tags": {
              "Name": "helloSpotHero-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04ef819c6738e0941"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public-subnet-in-us-west-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0541ea7d",
            "arn": "arn:aws:ec2:us-west-2:104673660634:instance/i-0d8f4790223c2e38c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0d8f4790223c2e38c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aescoto",
            "monitoring": false,
            "primary_network_interface_id": "eni-0bac7b901d83f050b",
            "private_dns": "ip-10-0-1-155.us-west-2.compute.internal",
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-35-166-80-32.us-west-2.compute.amazonaws.com",
            "public_ip": "35.166.80.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-069ecf17470a5908e",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-033e451ebf103152a",
            "tags": {
              "Name": "NAT"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0279f9cc25c59dce6"
            ]
          },
          "dependencies": [
            "aws_security_group.nat",
            "aws_subnet.public-subnet-in-us-west-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f08a9eefdb616453",
            "owner_id": "104673660634",
            "tags": {
              "Name": "spotHero gw"
            },
            "vpc_id": "vpc-02cfb45b68579ee98"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-subnet-in-us-west-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08b6728d9e8398aa2",
            "owner_id": "104673660634",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0d8f4790223c2e38c",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-02cfb45b68579ee98"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_security_group.nat",
            "aws_subnet.public-subnet-in-us-west-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet-in-us-west-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-077298f24bef5a2ee",
            "owner_id": "104673660634",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f08a9eefdb616453",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-02cfb45b68579ee98"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-in-us-west-2-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0558c81cba6bbd003",
            "route_table_id": "rtb-08b6728d9e8398aa2",
            "subnet_id": "subnet-0a64eabedbd3667f3"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_route_table.private-subnet-in-us-west-2",
            "aws_security_group.nat",
            "aws_subnet.private-subnet-in-us-west-2",
            "aws_subnet.public-subnet-in-us-west-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-in-us-west-2-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067919cd5dd4ac9e1",
            "route_table_id": "rtb-077298f24bef5a2ee",
            "subnet_id": "subnet-033e451ebf103152a"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public-subnet-in-us-west-2",
            "aws_subnet.public-subnet-in-us-west-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:104673660634:security-group/sg-0279f9cc25c59dce6",
            "description": "NAT security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0279f9cc25c59dce6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_nat",
            "name_prefix": null,
            "owner_id": "104673660634",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NATSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cfb45b68579ee98"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:104673660634:security-group/sg-04ef819c6738e0941",
            "description": "Accept incoming connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32769,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32769
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-04ef819c6738e0941",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32769,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32769
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc_web",
            "name_prefix": null,
            "owner_id": "104673660634",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cfb45b68579ee98"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-in-us-west-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:104673660634:subnet/subnet-0a64eabedbd3667f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a64eabedbd3667f3",
            "map_public_ip_on_launch": false,
            "owner_id": "104673660634",
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-02cfb45b68579ee98"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-in-us-west-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:104673660634:subnet/subnet-033e451ebf103152a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-033e451ebf103152a",
            "map_public_ip_on_launch": false,
            "owner_id": "104673660634",
            "tags": {
              "Name": "publicSubnet"
            },
            "vpc_id": "vpc-02cfb45b68579ee98"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:104673660634:vpc/vpc-02cfb45b68579ee98",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f446853f4293fa60",
            "default_route_table_id": "rtb-010373c28f3da2cc4",
            "default_security_group_id": "sg-0dbe24061ad9988d2",
            "dhcp_options_id": "dopt-e9841091",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02cfb45b68579ee98",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-010373c28f3da2cc4",
            "owner_id": "104673660634",
            "tags": {
              "Name": "spotHero_vpc"
            }
          }
        }
      ]
    }
  ]
}